--- a/ChainLink-Server/package.json
+++ b/ChainLink-Server/package.json
@@ -18,7 +18,10 @@
     "graphql-tools": "^9.0.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
-    "mongoose": "^8.1.2"
+    "mailer": "^0.6.7",
+    "mongoose": "^8.1.2",
+    "node": "^20.18.0",
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
