--- a/ChainLink-Client/package.json
+++ b/ChainLink-Client/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0",
     "tcx-file-class": "^1.0.42"
   },
   "devDependencies": {
