I can't get this to work, be my guest

--- a/ChainLink-Server/package.json
+++ b/ChainLink-Server/package.json
@@ -11,11 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.0",
+    "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.2",
-    "graphql": "^16.8.1",
+    "graphql": "^16.9.0",
+    "graphql-express": "^3.0.0",
     "graphql-tag": "^2.12.6",
     "graphql-tools": "^9.0.0",
+    "graphql-upload": "^13.0.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "mailer": "^0.6.7",
