--- a/ChainLink-Client/package.json
+++ b/ChainLink-Client/package.json
@@ -18,7 +18,9 @@
     "graphql": "^16.8.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.0",
