--- a/ChainLink-Client/package.json
+++ b/ChainLink-Client/package.json
@@ -8,7 +8,10 @@
     "build": "tsc && vite build",
     "build-dev": "tsc && vite build --mode development",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "@apollo/client": "^3.9.5",
@@ -32,6 +35,7 @@
     "tcx-file-class": "^1.0.42"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.2.0",
     "@types/leaflet": "^1.9.8",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -42,6 +46,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.1.0"
+    "vite": "^5.1.0",
+    "vitest": "^3.0.6"
   }
 }
