--- a/ChainLink-Client/tsconfig.json
+++ b/ChainLink-Client/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts", "tests/components/Button.test.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
