--- a/ChainLink-Client/package.json
+++ b/ChainLink-Client/package.json
@@ -50,5 +50,8 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
     "vitest": "^3.0.6"
+  },
+  "vitest": {
+    "setupFiles": ["./tests/setupTests.js"]
   }
 }
