--- a/ChainLink-Server/.env.example
+++ b/ChainLink-Server/.env.example
@@ -2,3 +2,5 @@ SECRET=SAMPLE_SECRET
 PORT=5001
 MONGODB=MONGODB_URI
 CLIENT_URI=http://localhost:5173/
+STRAVA_CLIENT_ID=SAMPLE_STRAVA_CLIENT_ID
+STRAVA_CLIENT_SECRET=SAMPLE_STRAVA_CLIENT_SECRET
