--- a/ChainLink-Client/package.json
+++ b/ChainLink-Client/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
+    "react-slider": "^2.0.6",
     "react-toastify": "^10.0.6",
     "react-tooltip": "^5.28.0",
     "tcx-file-class": "^1.0.42"
