--- a/ChainLink-Client/package.json
+++ b/ChainLink-Client/package.json
@@ -32,17 +32,19 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
+    "react-slider": "^2.0.6",
     "react-toastify": "^10.0.6",
     "react-tooltip": "^5.28.0",
     "tcx-file-class": "^1.0.42"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.9",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/leaflet": "^1.9.8",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-slider": "^1.3.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -54,6 +56,8 @@
     "vitest": "^3.0.6"
   },
   "vitest": {
-    "setupFiles": ["./tests/setupTests.js"]
+    "setupFiles": [
+      "./tests/setupTests.js"
+    ]
   }
 }
