--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,16 @@ on:
     push:
         branches:
             - main
+    workflow_dispatch:
+        inputs:
+          logLevel:
+            description: 'Log level'
+            required: true
+            default: 'warning'
+          tags:
+            description: 'Test scenario tags'
+            required: false
+
 
 jobs:
     deploy:
