--- a/ChainLink-Server/.env.example
+++ b/ChainLink-Server/.env.example
@@ -1,6 +1,6 @@
 SECRET=SAMPLE_SECRET
 PORT=5001
-MONGODB=MONGODB_URI
+MONGODB=mongodb://localhost:27017/chainlinkdb
 CLIENT_URI=http://localhost:5173/
 STRAVA_CLIENT_ID=SAMPLE_STRAVA_CLIENT_ID
 STRAVA_CLIENT_SECRET=SAMPLE_STRAVA_CLIENT_SECRET
