--- a/ChainLink-Server/package.json
+++ b/ChainLink-Server/package.json
@@ -4,23 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index",
+    "start": "NODE_ENV=development nodemon index.js",
+    "prod": "NODE_ENV=production node index.js",
     "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/server": "^4.10.0",
+    "@apollo/server": "^4.12.2",
+    "@types/multer": "^2.0.0",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.7",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^5.1.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "graphql-tools": "^9.0.0",
+    "graphql-upload": "^13.0.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "mailer": "^0.6.7",
     "mongoose": "^8.10.1",
+    "multer": "^2.0.2",
     "node": "^20.18.0",
     "nodemailer": "^6.9.15",
     "vitest": "^3.0.7"
