--- a/ChainLink-Server/package.json
+++ b/ChainLink-Server/package.json
@@ -15,6 +15,7 @@
     "@apollo/server": "^4.12.2",
     "@types/multer": "^2.0.0",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
